--- a/res/menu/r01.xml
+++ b/res/menu/r01.xml
@@ -1,4 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+
+   	<item android:id="@+id/MENU_DESCARGA" 
+        android:title="@string/download" 
+        android:showAsAction="ifRoom|withText"
+        android:icon="@drawable/ic_menu_download"></item>
+   	<item android:id="@+id/MENU_CARGA" 
+        android:title="@string/upload" 
+        android:showAsAction="ifRoom|withText"
+        android:icon="@drawable/ic_menu_upload"></item>
    	<item android:id="@+id/MENU_PREFERENCES" 
         android:title="@string/preferences" 
         android:showAsAction="ifRoom|withText"
