--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_1">Estudios</string>
+    <string name="main_1">Estudio Cohorte Familia</string>
 </resources>
