--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -5,4 +5,9 @@
         <item>@string/main_1</item>
     </string-array>
     
+    <string-array name="menu_cohorte_familia">
+        <item>@string/new_screen</item>
+        <item>@string/casa_search</item>
+    </string-array>
+    
 </resources>
