--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -7,5 +7,6 @@
     <string name="casa_id">Código Casa</string>
     <string name="casa_jefe_familia_nombre">Nombre jefe de familia</string>
     <string name="casa_jefe_familia_apellido">Apellido jefe de familia</string>
+    <string name="casa">Casa</string>
     
 </resources>
