--- a/res/values/strings_cohorte_familia.xml
+++ b/res/values/strings_cohorte_familia.xml
@@ -7,7 +7,10 @@
     <string name="aceptaTamizajeHint">Pregunte si el jefe de familia permite realizar tamizaje a los miembros de este hogar.</string>
     <string name="razonNoParticipa">Porque razón no desea participar?</string>
     <string name="razonNoParticipaHint">Pregunte cual es la razón por la que no desea que su casa participe en el estudio.</string>
-
+    <string name="codigoCHF">Código Casa Cohorte Familia</string>
+    <string name="codigoCHFHint">Escanee el código de esta familia.</string>
+    <string name="noAcepta">No acepta entrar, finaliza el formulario.</string>
+    
     <string name="new_screen_per">Nuevo Tamizaje Persona</string>
     <string name="new_survey_1">Nueva Encuesta Participante</string>
     
