Encuesta casa parte2

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -13,6 +13,7 @@
     <string-array name="menu_casa">
         <item>@string/participants</item>
         <item>@string/new_survey_1</item>
+        <item>@string/environments</item>
     </string-array>
     
 </resources>
