--- a/res/values/strings_encuesta_casa.xml
+++ b/res/values/strings_encuesta_casa.xml
@@ -32,7 +32,7 @@
     <string name="tanquesTapados">¿Tanques tapados?</string>
     <string name="tanquesTapadosHint">Ud. mantiene los tanques tapados</string>
     <string name="pilasTapadas">¿Pilas tapadas?</string>
-    <string name="pilasTapadasHint">Ud. mantiene las pilas tapados</string>
+    <string name="pilasTapadasHint">Ud. mantiene las pilas tapadas</string>
     <string name="otrosRecipientesTapados">Otros recipinetes tapados?</string>
     <string name="otrosRecipientesTapadosHint">Ud. mantiene los otros recipientes tapados</string>
     <string name="barrilesConAbate">¿Barriles con abate?</string>
@@ -84,24 +84,25 @@
     <string name="tienePatos">¿Tiene patos en la casa?</string>
     <string name="tieneCerdos">¿Tiene cerdos en la casa?</string>
     <string name="cantidadGallinas">¿Cuántos pollos, gallinas y gallos tiene en la casa?</string>
-    <string name="cantidadPatos">¿Cuántos patos en la casa?</string>
+    <string name="cantidadPatos">¿Cuántos patos tiene en la casa?</string>
     <string name="cantidadCerdos">¿Cuántos cerdos tiene en la casa?</string>
     <string name="gallinasDentroCasa">¿Algunas veces están los pollos, gallinas y gallos dentro de la casa?</string>
     <string name="patosDentroCasa">¿Algunas veces están los patos dentro de la casa?</string>
     <string name="cerdosDentroCasa">¿Algunas veces están los cerdos dentro de la casa?</string>
     <string name="personaFumaDentroCasa">¿Alguna persona que no pertenece al estudio fuma dentro de la casa? </string>
-    <string name="madreFuma">Madre</string>
-    <string name="padreFuma">Padre</string>
-    <string name="otrosFuman">Otros</string>
-    <string name="madreFumaHint">La madre fuma dentro de la casa</string>
-    <string name="padreFumaHint">El Padre fuma dentro de la casa</string>
-    <string name="otrosFumanHint">Otras personas fuman dentro de la casa</string>
+    <string name="madreFuma">Madre fuma</string>
+    <string name="padreFuma">Padre fuma</string>
+    <string name="otrosFuman">Otros fuman</string>
+    <string name="madreFumaHint">La madre fuma dentro de la casa y no pertenece al estudio</string>
+    <string name="padreFumaHint">El Padre fuma dentro de la casa  y no pertenece al estudio</string>
+    <string name="otrosFumanHint">Otras personas  que no son la madre o el padre fuman dentro de la casa  y no pertenecen al estudio</string>
     <string name="cantidadOtrosFuman">¿Cuántas personas?</string>
-    <string name="cantidadCigarrilosMadre">Cantidad de cigarrollos diarios</string>
-    <string name="cantidadCigarrillosPadre">Cantidad de cigarrollos diarios</string>
-    <string name="cantidadCigarrillosOtros">Cantidad de cigarrollos diarios</string>
+    <string name="cantidadCigarrilosMadre">Cantidad de cigarrollos diarios madre</string>
+    <string name="cantidadCigarrillosPadre">Cantidad de cigarrollos diarios padre</string>
+    <string name="cantidadCigarrillosOtros">Cantidad de cigarrollos diarios otros</string>
     <string name="cantidadCigarrilosMadreHint">Indicar la cantidad de cigarrollos diarios que fuma la madre</string>
     <string name="cantidadCigarrillosPadreHint">Indicar la cantidad de cigarrollos diarios que fuma el padre</string>
-    <string name="cantidadCigarrillosOtrosHint">Indicar la cantidad de cigarrollos diarios que fuma otras personas en total</string>
+    <string name="cantidadCigarrillosOtrosHint">Indicar la cantidad de cigarrollos diarios que fuman otras personas en total</string>
+    <string name="cantidadOtrosFumanHint">Indicar la cantidad de otras personas que fuman dentro de la casa y no pertenecen al estudio ni son la madre o el padre</string>
     <string name="horasSinAguaHint">(0-24h)</string>
 </resources>
