--- a/res/values/strings_cohorte_familia.xml
+++ b/res/values/strings_cohorte_familia.xml
@@ -7,8 +7,8 @@
     
     <string name="new_screen">Agregar Casa</string>
     
-    <string name="aceptaTamizaje">Acepta realizar tamizaje?</string>
-    <string name="aceptaTamizajeHint">Pregunte si el jefe de familia permite realizar tamizaje a los miembros de este hogar.</string>
+    <string name="aceptaTamizajeCasa">Acepta realizar tamizaje?</string>
+    <string name="aceptaTamizajeCasaHint">Pregunte si el jefe de familia permite realizar tamizaje a los miembros de este hogar.</string>
     <string name="razonNoParticipa">Porque razón no desea participar?</string>
     <string name="razonNoParticipaHint">Pregunte cual es la razón por la que no desea que su casa participe en el estudio.</string>
     <string name="codigoCHF">Código Casa Cohorte Familia</string>
