Correcciones Encuesta casa Encuesta datos parto bb parte 1 Menu Participantes

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -19,5 +19,12 @@
         <item>@string/new_survey_1</item>
         <item>@string/environments</item>
     </string-array>
-    
+
+    <string-array name="menu_participante">
+        <item>@string/new_survey_2</item>
+        <item>@string/new_survey_3</item>
+        <item>@string/new_survey_4</item>
+        <item>@string/new_survey_5</item>
+    </string-array>
+
 </resources>
