Encuesta datos parto bb parte 2

--- a/res/values/strings_encuesta_datospartobb.xml
+++ b/res/values/strings_encuesta_datospartobb.xml
@@ -7,7 +7,8 @@
     <string name="tiempoEmbSemana">Digite el tiempo que duró el embarazo en semanas</string>
     <string name="docMedTiempoEmb_sn">¿Madre presenta Documento médico para Verificar el tiempo que duró el embarazo?</string>
     <string name="docMedTiempoEmb">Seleccione el Documento médico con el que Usted verificó el tiempo que duró el embarazo</string>
-    <string name="otroDocMedTiempoEmb">Indique el nombre del Otro Documento Médico</string>
+    <string name="otroDocMedTiempoEmb">Otro documento médico tiempo que duró el embarazo</string>
+    <string name="otroDocMedTiempoEmbHint">Indique el nombre del Otro Documento Médico con el que verificó el tiempo que duró el embarazo</string>
     <string name="fum">Ingrese la FUM</string>
     <string name="fumFueraRango_sn">¿Es correcta la FUM del documento médico?</string>
     <string name="fumFueraRango_snHint">Verifique la FUM - La Semana de gestacion está fuera de rango</string>
@@ -18,13 +19,14 @@
     <string name="edadGestHint">Digite la edad gestacional (en semanas) del Niño, que aparece en el Documento Médico</string>
     <string name="docMedEdadGest">Documento médico edad Gestacional del niño</string>
     <string name="docMedEdadGestHint">Seleccione el Documento médico con el que Usted verificó la edad Gestacional del niño</string>
-    <string name="OtroDocMedEdadGest">Otro Documento Médico</string>
-    <string name="OtroDocMedEdadGestHint">Indique el nombre del Otro Documento Médico</string>
+    <string name="otroDocMedEdadGest">Otro documento médico edad gestacional</string>
+    <string name="OtroDocMedEdadGestHint">Indique el nombre del Otro Documento Médico con el que verificó la edad gestacional del niño</string>
     <string name="prematuro_sndr">¿Cuándo nació el bebé, el Médico u otro personal de salud le dijo que era prematuro?</string>
     <string name="pesoBB_sndr">¿Sabe cuánto pesó su bebé al nacer?</string>
     <string name="pesoBB">Digite el peso del bebé al nacer en gr</string>
     <string name="docMedPesoBB_sn">¿Madre presenta Documento médico para Verificar el peso al nacimiento del participante?</string>
     <string name="docMedPesoBB">¿Con qué Documento médico Usted verificó el peso al nacimiento del participante?</string>
-    <string name="otroDocMedPesoBB">Indique el nombre del Otro Documento Médico</string>
-
+    <string name="otroDocMedPesoBB">Otro documento médico peso al nacimiento</string>
+    <string name="otroDocMedPesoBBHint">Indique el nombre del Otro Documento Médico con el que verificó el peso al nacimiento</string>
+    <string name="reingresarFUM">Regrese al campo donde ingresará de nuevo la FUM</string>
 </resources>
