Encuesta participante parte 2

--- a/res/values/strings_encuesta_participante.xml
+++ b/res/values/strings_encuesta_participante.xml
@@ -42,15 +42,15 @@
     <string name="fumaDentroCasa">¿Usted fuma adentro de la casa?</string>
     <string name="tuberculosisPulmonarActual">¿Padece actualmente de tuberculosis pulmonar?</string>
     <string name="fechaDiagnosticoTubPulActual">Fecha de diagnóstico (mes/año)</string>
-    <string name="anioFechaDiagnosticoTubPulActual">Año Fecha de diagnóstico tuberculosis pulmonar</string>
-    <string name="mesFechaDiagnosticoTubPulActual">Mes Fecha de diagnóstico tuberculosis pulmonar</string>
+    <string name="anioFechaDiagnosticoTubPulActual">Año de diagnóstico tuberculosis pulmonar</string>
+    <string name="mesFechaDiagnosticoTubPulActual">Mes de diagnóstico tuberculosis pulmonar</string>
     <string name="tomaTratamientoTubPulActual">¿Toma tratamiento para tuberculosis?</string>
     <string name="completoTratamientoTubPulActual">¿Completó su tratamiento para tuberculosis?</string>
     <string name="tuberculosisPulmonarPasado">¿Le han diagnosticado tuberculosis pulmonar en el pasado?</string>
     <string name="fechaDiagnosticoTubPulPasadoSn">¿Conoce la fecha de diagnóstico tuberculosis pulmonar en el pasado?</string>
     <string name="fechaDiagnosticoTubPulPasado">Fecha de diagnóstico (mes/año) o desconocido</string>
-    <string name="anioFechaDiagnosticoTubPulPasado">Año Fecha de diagnóstico tuberculosis pulmonar en el pasdo</string>
-    <string name="mesFechaDiagnosticoTubPulPasado">Mes Fecha de diagnóstico tuberculosis pulmonar en el pasado</string>
+    <string name="anioFechaDiagnosticoTubPulPasado">Año de diagnóstico tuberculosis pulmonar en el pasdo</string>
+    <string name="mesFechaDiagnosticoTubPulPasado">Mes de diagnóstico tuberculosis pulmonar en el pasado</string>
     <string name="tomaTratamientoTubPulPasado">¿Tomó tratamiento para tuberculosis en ese momento?</string>
     <string name="completoTratamientoTubPulPasado">¿Completó su tratamiento para tuberculosis en el pasado?</string>
     <string name="alergiaRespiratoria">¿Le han diagnosticado algún tipo de alergia respiratoria?</string>
