--- a/res/values/strings_tamizaje.xml
+++ b/res/values/strings_tamizaje.xml
@@ -11,18 +11,18 @@
     <string name="razonNoParticipaPersonaHint">Pregunte porque no está de acuerdo en realizar el tamizaje.</string>
     <string name="criteriosInclusion">Criterios de Inclusión</string>
     <string name="criteriosInclusionHint">Verifique cada uno de los Criterios de Inclusión</string>
-    <string name="enfermedad">El participante está enfermo actualmente?</string>
-    <string name="enfermedadHint">(enfermedad aguda y/o crónica)</string>
-    <string name="dondeAsisteProblemasSalud">En que lugar se atiende el participante?</string>
+    <string name="enfermedad">Enfermo</string>
+    <string name="enfermedadHint">El participante está enfermo actualmente? (enfermedad aguda y/o crónica)</string>
+    <string name="dondeAsisteProblemasSalud">Lugar atención</string>
     <string name="dondeAsisteProblemasSaludHint">¿Dónde asiste cuando tiene problemas de salud el participante?</string>
     <string name="otroCentroSalud">Indique que otro centro de salud</string>
     <string name="otroCentroSaludHint">.</string>
     <string name="puestoSalud">Puesto de salud</string>
     <string name="puestoSaludHint">.</string>
-    <string name="aceptaAtenderCentro">¿Está dispuesto a ir solamente al C/S Socrates Flores si enferma?</string>
-    <string name="aceptaAtenderCentroHint">.</string>
-    <string name="esElegible">Fue determinada la elegibilidad para participar en el estudio.</string>
-    <string name="esElegibleHint">.</string>
+    <string name="aceptaAtenderCentro">Dispuesto a ir al CSSFV</string>
+    <string name="aceptaAtenderCentroHint">¿Está dispuesto a ir solamente al C/S Socrates Flores si enferma?</string>
+    <string name="esElegible">Elegible</string>
+    <string name="esElegibleHint">Fue determinada la elegibilidad para participar en el estudio?</string>
     <string name="aceptaParticipar">Acepta participar en el estudio?</string>
     <string name="aceptaParticiparHint"></string>
     <string name="razonNoAceptaParticipar">Porque no acepta participar en el estudio?</string>
@@ -31,8 +31,8 @@
     <string name="asentimientoVerbalHint">(Para Niños de 6 a 17 años)</string>
     
     
-    <string name="participadoCohortePediatrica">Usted o su hijo han participado en la cohorte pediatrica?</string>
-    <string name="participadoCohortePediatricaHint"></string>
+    <string name="participadoCohortePediatrica">Miembro cohorte</string>
+    <string name="participadoCohortePediatricaHint">Usted o su hijo han participado en la cohorte pediatrica?</string>
 
     <string name="codigoCohorte">Escanee el Código de Cohorte:</string>  
     <string name="codigoNuevoParticipante">Escanee el Código para el nuevo Participante:</string>
@@ -64,22 +64,22 @@
     <string name="apellido2Madre">2do Apellido Madre</string>
     <string name="apellido2MadreHint">Nombre completo de la madre</string>
     
-    <string name="emancipado">¿Participante Enmancipado/a?</string>
-    <string name="emancipadoHint"></string>
-    <string name="nombre1Tutor">1er Nombre JF</string>
-    <string name="nombre1TutorHint">Nombre completo del Jefe de Familia</string>
-    <string name="nombre2Tutor">2do Nombre JF</string>
-    <string name="nombre2TutorHint">Nombre completo del Jefe de Familia</string>
-    <string name="apellido1Tutor">1er Apellido JF</string>
-    <string name="apellido1TutorHint">Nombre completo del Jefe de Familia</string>
-    <string name="apellido2Tutor">2do Apellido JF</string>
-    <string name="apellido2TutorHint">Nombre completo del Jefe de Familia</string>
-    <string name="relacionFamiliarTutor">Relación Familiar </string>
+    <string name="emancipado">Emancipado</string>
+    <string name="emancipadoHint">¿Participante Enmancipado/a?</string>
+    <string name="nombre1Tutor">1er Nombre Tutor</string>
+    <string name="nombre1TutorHint">Nombre completo del Tutor</string>
+    <string name="nombre2Tutor">2do Nombre Tutor</string>
+    <string name="nombre2TutorHint">Nombre completo del Tutor</string>
+    <string name="apellido1Tutor">1er Apellido Tutor</string>
+    <string name="apellido1TutorHint">Nombre completo del Tutor</string>
+    <string name="apellido2Tutor">2do Apellido Tutor</string>
+    <string name="apellido2TutorHint">Nombre completo del Tutor</string>
+    <string name="relacionFamiliarTutor">Relación Familiar</string>
     <string name="relacionFamiliarTutorHint"></string>
-    <string name="participanteOTutorAlfabeto">¿El participante o Tutor es Alfabeto?</string>
-    <string name="participanteOTutorAlfabetoHint"></string>
-    <string name="testigoPresente">¿Un testigo está presente para explicar los procedimientos del estudio al participante potencial (o tutor) y asegurar que su participación es voluntaria?</string>
-    <string name="testigoPresenteHint"></string>
+    <string name="participanteOTutorAlfabeto">Alfabeto</string>
+    <string name="participanteOTutorAlfabetoHint">¿El participante o Tutor es Alfabeto?</string>
+    <string name="testigoPresente">Testigo presente</string>
+    <string name="testigoPresenteHint">¿Un testigo está presente para explicar los procedimientos del estudio al participante potencial (o tutor) y asegurar que su participación es voluntaria?</string>
     <string name="nombre1Testigo">1er Nombre Testigo</string>
     <string name="nombre1TestigoHint">Nombre completo del Testigo</string>
     <string name="nombre2Testigo">2do Nombre Testigo</string>
@@ -88,16 +88,16 @@
     <string name="apellido1TestigoHint">Nombre completo del Testigo</string>
     <string name="apellido2Testigo">2do Apellido Testigo</string>
     <string name="apellido2TestigoHint">Nombre completo del Testigo</string>
-    <string name="aceptaParteA">¿Acepta Parte A del Consentimiento de Cohorte de Familia?</string>
-    <string name="aceptaParteAHint"></string>
-    <string name="motivoRechazoParteA">Motivo de rechazo Consentimiento Cohorte de Familia</string>
-    <string name="motivoRechazoParteAHint"></string>
+    <string name="aceptaParteA">Acepta Parte A</string>
+    <string name="aceptaParteAHint">¿Acepta Parte A del Consentimiento de Cohorte de Familia?</string>
+    <string name="motivoRechazoParteA">Motivo de rechazo</string>
+    <string name="motivoRechazoParteAHint">Motivo de rechazo Consentimiento Cohorte de Familia</string>
     <string name="aceptaContactoFuturo">Contacto en el futuro:</string>
     <string name="aceptaContactoFuturoHint">¿Alguien puede contactarle en el futuro para proponerle participar en investigaciones adicionales?</string>
-    <string name="aceptaParteB">¿Acepta Parte B Estudios Futuros?</string>
-    <string name="aceptaParteBHint"></string>
-    <string name="aceptaParteC">¿Acepta Parte C Estudios Geneticos?</string>
-    <string name="aceptaParteCHint"></string>
+    <string name="aceptaParteB">Acepta Parte B</string>
+    <string name="aceptaParteBHint">¿Acepta Parte B Almacenamiento y uso de Muestras en Estudios Futuros?</string>
+    <string name="aceptaParteC">Acepta Parte C</string>
+    <string name="aceptaParteCHint">¿Acepta Parte C Estudios Geneticos?</string>
     
 
     
