--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -25,6 +25,9 @@
         <item>@string/new_survey_3</item>
         <item>@string/new_survey_4</item>
         <item>@string/new_survey_5</item>
+        <item>@string/new_mx_bhc</item>
+        <item>@string/new_mx_rojo</item>
+        <item>@string/new_mx_pax</item>
     </string-array>
 
 </resources>
