--- a/res/values/strings_main.xml
+++ b/res/values/strings_main.xml
@@ -4,6 +4,7 @@
     <string name="barrio">Barrio</string>
     <string name="manzana">Manzana</string>
     <string name="casa_search">Buscar Casa</string>
+    <string name="part_search">Buscar Participante</string>
     <string name="casa_id">Código Casa Cohorte</string>
     <string name="casa_jefe_familia_nombre">Nombre jefe de familia</string>
     <string name="casa_jefe_familia_apellido">Apellido jefe de familia</string>
