--- a/res/values/strings_encuesta_casa.xml
+++ b/res/values/strings_encuesta_casa.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="new_house_survey">Nuevo Encuesta Casa</string>
-
+    <string name="confirm_house_survey">¿Desea agregar encuesta de casa a esta casa? </string>
     <string name="cuantoCuartos">¿Cuántos cuartos hay en la casa? </string>
     <string name="cuartosDormir">¿Cuántos cuartos de la casa son utilizados para dormir?</string>
     <string name="horasSinAgua">¿Cuántas horas por día  no tiene servicio de agua?</string>
