--- a/res/values/strings_cohorte_familia.xml
+++ b/res/values/strings_cohorte_familia.xml
@@ -11,12 +11,15 @@
     <string name="participants">Lista Participantes</string>
     <string name="new_screen_per">Agregar Persona</string>
     <string name="new_room">Agregar cuarto</string>
+    <string name="new_bed">Agregar cama</string>
+    <string name="new_pbed">Agregar persona</string>
     <string name="new_survey_1">Encuesta Casa</string>
     <string name="new_survey_2">Encuesta Participante</string>
     <string name="environments">Areas</string>
     <string name="participant">Participante</string>
     <string name="rooms">Cuartos</string>
     <string name="beds">Camas</string>
+    <string name="pbeds">Personas en la cama</string>
 
     <string name="new_survey_3">Datos Parto BB</string>
     <string name="new_survey_4">Peso y Talla</string>
