--- a/res/values/strings_areaambiente_casa.xml
+++ b/res/values/strings_areaambiente_casa.xml
@@ -7,8 +7,7 @@
     <string name="habitacion">Habitación</string>
     <string name="sala">Sala</string>
     <string name="ventana">Ventana</string>
-    <string name="largo">Largo</string>
-    <string name="ancho">Ancho</string>
+    
     <string name="alto">Alto</string>
     <string name="total">Total</string>
     <string name="numVentanas">Número de ventanas</string>
@@ -19,4 +18,8 @@
 	<string name="descCama">Observación cama</string>
 	<string name="estaEnEstudio">Esta en el estudio?</string>
 	<string name="participante">Escanear Código</string>
+	<string name="tipo">Tipo</string>
+	<string name="largo">Largo (mts)</string>
+	<string name="ancho">Ancho (mts)</string>
+	<string name="area">Area (mts2)</string>
 </resources>
