--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -28,6 +28,7 @@
         <item>@string/new_survey_5</item>
         <item>@string/new_mx_bhc</item>
         <item>@string/new_mx_rojo</item>
+        <item>@string/new_participant_sa_survey</item>
     </string-array>
 
 </resources>
